hphp/hack/test/typecheck/inheritance/non_const_prop_override_static.php.exp
WARN: File "non_const_prop_override_static.php", line 8, characters 17-17:
Static property is overridden: `$p` (Warn[12021])
  File "non_const_prop_override_static.php", line 9, characters 17-19:
  Overriding static property is here
ERROR: File "non_const_prop_override_static.php", line 9, characters 17-19:
The property `$p` has the wrong type (Typing[4341])
  File "non_const_prop_override_static.php", line 9, characters 17-19:
  Typing error
  File "non_const_prop_override_static.php", line 9, characters 17-19:
  Expected `int`
  File "non_const_prop_override_static.php", line 5, characters 17-24:
  But got `arraykey`
